--- a/.github/workflows/pr_develop.yaml
+++ b/.github/workflows/pr_develop.yaml
@@ -30,7 +30,7 @@ jobs:
           script: |
             const checklist = process.env.CHECKLIST;
 
-            const issueTitle = `Checklist for PR #${context.payload.pull_request.number}`;
+            const issueTitle = `Checklist for PR Teste`;
             const issueBody = checklist;
 
             const issue = await github.rest.issues.create({
