--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -5,16 +5,55 @@ on:
     types: [opened]
 
 jobs:
-  check-issue:
+  create-issue:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Read checklist template
+        id: read-template
+        run: |
+          CHECKLIST=$(cat .github/ISSUE-CHECKLIST)
+          echo "::set-output name=checklist::$CHECKLIST"
+
+      - name: Create issue
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { context, core } = require('@actions/github');
+            const github = require('@actions/github');
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const checklist = `{{ steps.read-template.outputs.checklist }}`;
+
+            const issueTitle = `Checklist for PR #${context.payload.pull_request.number}`;
+            const issueBody = checklist;
+
+            const issue = await github.rest.issues.create({
+              owner: owner,
+              repo: repo,
+              title: issueTitle,
+              body: issueBody,
+            });
+
+            core.setOutput("issue_number", issue.data.number);
+
+  check-issue:
+    needs: create-issue
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install jq
+        run: sudo apt-get install -y jq
+
       - name: Check if checklist is completed
         run: |
-          ISSUE_NUMBER=$(echo "${{ needs.create-issue.outputs.issue_number }}")
+          ISSUE_NUMBER=${{ needs.create-issue.outputs.issue_number }}
           RESPONSE=$(curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ github.repository }}/issues/$ISSUE_NUMBER)
           CHECKLIST=$(echo $RESPONSE | jq '.body')
 
