--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -1,60 +1,20 @@
-name: Create Issue with Checklist
+name: Create Checklist Issue on Push
 
 on:
-  pull_request:
-    types: [ opened ]
+  push:
+    branches:
+      - feature**
 
 jobs:
   create-issue:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Create issue
-        uses: actions/github-script@v6
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Create Issue
+        uses: peter-evans/create-issue-from-file@v4
         with:
-          script: |
-            const { context, github } = require('@actions/github');
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
-
-            const issueTitle = `Checklist for PR #${context.payload.pull_request.number}`;
-            const issueBody = `
-            ### Checklist
-
-            - [ ] Task 1
-            - [ ] Task 2
-            - [ ] Task 3
-            
-            Please complete all tasks before merging the PR.`;
-  
-            const issue = await github.rest.issues.create({
-            owner: owner,
-            repo: repo,
-            title: issueTitle,
-            body: issueBody,
-            });
-              
-              core.setOutput("issue_number", issue.data.number);
-
-check-issue:
-  needs: create-issue
-  runs-on: ubuntu-latest
-
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Check if checklist is completed
-      run: |
-        ISSUE_NUMBER=$(echo "${{ needs.create-issue.outputs.issue_number }}")
-        RESPONSE=$(curl -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/${{ github.repository }}/issues/$ISSUE_NUMBER)
-        CHECKLIST=$(echo $RESPONSE | jq '.body')
-        
-        INCOMPLETE_ITEMS=$(echo "$CHECKLIST" | grep -o '\- \[ \]')
-        
-        if [ -n "$INCOMPLETE_ITEMS" ]; then
-          echo "Checklist not completed."
-          exit 1
-        else
-          echo "Checklist completed."
-        fi
+          title: "Code Review Checklist"
+          content-filepath: .github/ISSUE_TEMPLATE/checklist.md
+          labels: checklist
