--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -12,6 +12,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Set up GitHub CLI
+        run: |
+          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-key C99B11DEB97541F0
+          echo "deb [arch=amd64] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list
+          sudo apt update
+          sudo apt install gh -y
+
+      - name: Authenticate GitHub CLI
+        run: echo ${{ secrets.GH_TOKEN }} | gh auth login --with-token
+
       - name: Read Checklist Template
         id: read-template
         run: |
@@ -21,20 +31,6 @@ jobs:
           echo "EOF" >> $GITHUB_ENV
 
       - name: Create Issue
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const issueTitle = "Code Review Checklist";
-            const issueBody = process.env.CHECKLIST;
-            const labels = ["checklist"];
-            const issue = await github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: issueTitle,
-              body: issueBody,
-              labels: labels
-            });
-            core.info(`Issue created: ${issue.data.html_url}`);
+        run: gh issue create --title "Code Review Checklist" --body "$CHECKLIST" --label "checklist"
         env:
           CHECKLIST: ${{ env.CHECKLIST }}
