--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -23,6 +23,15 @@ jobs:
       - name: Authenticate GitHub CLI
         run: echo ${{ secrets.GITHUB_TOKEN}} | gh auth login --with-token
 
+      - name: Create checklist label if it doesn't exist
+        run: |
+          gh api \
+            -X POST \
+            -H "Accept: application/vnd.github.v3+json" \
+            /repos/${{ github.repository }}/labels \
+            -f name='checklist' \
+            -f color='f29513' || echo "Label 'checklist' already exists"
+
       - name: Read Checklist Template
         id: read-template
         run: |
