adicionando actions para validar variáveis no .properties e criação checklist

--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -23,15 +23,6 @@ jobs:
       - name: Authenticate GitHub CLI
         run: echo ${{ secrets.GITHUB_TOKEN}} | gh auth login --with-token
 
-      - name: Create checklist label if it doesn't exist
-        run: |
-          gh api \
-            -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            /repos/${{ github.repository }}/labels \
-            -f name='checklist' \
-            -f color='f29513' || echo "Label 'checklist' already exists"
-
       - name: Read Checklist Template
         id: read-template
         run: |
@@ -41,6 +32,6 @@ jobs:
           echo "EOF" >> $GITHUB_ENV
 
       - name: Create Issue
-        run: gh issue create --title "Code Review Checklist" --body "$CHECKLIST" --label "checklist"
+        run: gh issue create --title "Code Review Checklist" --body "$CHECKLIST" --label "question"
         env:
           CHECKLIST: ${{ env.CHECKLIST }}
