--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -31,7 +31,12 @@ jobs:
           echo "$CHECKLIST" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-      - name: Create Issue
-        run: gh issue create --title "Code Review Checklist" --body "$CHECKLIST" --label "question"
+      - name: Create Issue using REST API
+        run: |
+          curl -X POST \
+            -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/issues \
+            -d '{"title":"Code Review Checklist","body":"'"$CHECKLIST"'","labels":["question"]}'
         env:
           CHECKLIST: ${{ env.CHECKLIST }}
