--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -33,9 +33,8 @@ jobs:
 
       - name: Create Issue using REST API
         run: |
-          echo github.repository
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/issues \
             -d '{"title":"Code Review Checklist","body":"'"$CHECKLIST"'","labels":["question"]}'
