--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -34,9 +34,10 @@ jobs:
       - name: Create Issue using REST API
         run: |
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/${{ github.repository }}/issues \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github+json" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{ github.owner }}/${{ github.repository }}/issues \
             -d '{"title":"Code Review Checklist","body":"'"$CHECKLIST"'","labels":["question"]}'
         env:
           CHECKLIST: ${{ env.CHECKLIST }}
