adicionando actions para validar variáveis no .properties e criação checklist

--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -33,6 +33,8 @@ jobs:
 
       - name: Create Issue using REST API
         run: |
+          echo ${{ github.owner}}
+          echo ${{ github.repository}}
           curl -X POST \
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github+json" \
