--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt install gh -y
 
       - name: Authenticate GitHub CLI
-        run: echo ${{ secrets.GITHUB_ISSUE_TOKEN}} | gh auth login --with-token
+        run: echo ${{ secrets.GITHUB_TOKEN}} | gh auth login --with-token
 
       - name: Read Checklist Template
         id: read-template
