--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -36,7 +36,7 @@ jobs:
           echo ${{ github.repository}}
           curl -L \
             -X POST \
-            -H "Authorization: Bearer ${{secrets.ISSUE_TOKEN}}" \
+            -H "Authorization: Bearer ${{secrets.API_TOKEN}}" \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
