--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -40,6 +40,4 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
-            -d '{"title":"Found a bug","body":"I'\''m having a problem with this.","assignees":["octocat"],"milestone":1,"labels":["bug"]}'
-        env:
-          CHECKLIST: ${{ env.CHECKLIST }}
+            -d '{"title":"Found a bug","body":"I'\''m having a problem with this.","milestone":1,"labels":["bug"]}'
