adicionando actions para validar variáveis no .properties e criação checklist

--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Create Issue using REST API
         run: |
           echo ${{ github.repository}}
+          cat CHECKLIST 
           curl -L \
             -X POST \
             -H "Authorization: Bearer ${{secrets.API_TOKEN}}" \
