--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -36,11 +36,11 @@ jobs:
       - name: Create Issue using REST API
         run: |
           echo ${{ github.repository}}
-          echo $CHECKLIST 
+          echo ${{CHECKLIST}} 
           curl -L \
             -X POST \
             -H "Authorization: Bearer ${{secrets.API_TOKEN}}" \
             -H "Accept: application/vnd.github.full+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
-            -d '{"title":"Code Review Checklist","body":"$CHECKLIST","labels":["question"]}'
+            -d '{"title":"Code Review Checklist","body":"${{CHECKLIST}}","labels":["question"]}'
