--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -39,7 +39,7 @@ jobs:
           curl -L \
             -X POST \
             -H "Authorization: Bearer ${{secrets.API_TOKEN}}" \
-            -H "Accept: application/vnd.github.full+json" \
+            -H "Accept: application/vnd.github.text+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
             -d '{"title":"Code Review Checklist","body":$CHECKLIST,"labels":["question"]}'
