--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -29,7 +29,7 @@ jobs:
         id: read-template
         run: |
           CHECKLIST=$(cat .github/ISSUE_TEMPLATE/checklist.md)
-          echo CHECKLIST
+          echo $CHECKLIST
           echo "CHECKLIST<<EOF" >> $GITHUB_ENV
           echo "$CHECKLIST" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
