--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -29,7 +29,6 @@ jobs:
         id: read-template
         run: |
           CHECKLIST=$(cat .github/ISSUE_TEMPLATE/checklist.md)
-          echo $CHECKLIST
           echo "CHECKLIST<<EOF" >> $GITHUB_ENV
           echo "$CHECKLIST" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -37,10 +36,11 @@ jobs:
       - name: Create Issue using REST API
         run: |
           echo ${{ github.repository}}
+          echo $CHECKLIST
           curl -L \
             -X POST \
             -H "Authorization: Bearer ${{secrets.API_TOKEN}}" \
             -H "Accept: application/vnd.github.text+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
-            -d '{"title":"Code Review Checklist","body":"'"$CHECKLIST"'","labels":["question"]}'
+            -d '{"title":"Code Review Checklist","body":"$CHECKLIST","labels":["question"]}'
