--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -14,17 +14,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-#      - name: Set up GitHub CLI
-#        run: |
-#          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-#          sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
-#          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-#          sudo apt update
-#          sudo apt install gh -y
-#
-#      - name: Authenticate GitHub CLI
-#        run: echo ${{ secrets.GITHUB_TOKEN}} | gh auth login --with-token
-
       - name: Read Checklist Template
         id: read-template
         run: |
@@ -43,4 +32,4 @@ jobs:
             -H "Accept: application/vnd.github.text+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
-            -d '{"title":"Code Review Checklist","body":"$CHECKLIST","labels":["question"]}'
+            -d '{"title":"Code Review Checklist","body":"'$CHECKLIST'","labels":["question"]}'
