--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -31,4 +31,4 @@ jobs:
             -H "Accept: application/vnd.github.full+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
-            -d '{"title":"Code Review Checklist","body_html": "'"$CHECKLIST"'","labels":["question"]}'
+            -d '{"title":"Code Review Checklist","body_text": $CHECKLIST,"labels":["question"]}'
