--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -18,9 +18,7 @@ jobs:
         id: read-template
         run: |
           CHECKLIST=$(cat .github/ISSUE_TEMPLATE/checklist.md | jq -sR .)
-          echo "CHECKLIST<<EOF" >> $GITHUB_ENV
-          echo "$CHECKLIST" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          echo "CHECKLIST=$CHECKLIST" >> $GITHUB_ENV
 
       - name: Create Issue using REST API
         run: |
@@ -32,3 +30,5 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
             -d '{"title":"Code Review Checklist","body": '"$CHECKLIST'","labels":["question"]}'
+        env:
+          CHECKLIST: ${{ env.CHECKLIST }}
