--- a/.github/workflows/create-issue-checklist.yml
+++ b/.github/workflows/create-issue-checklist.yml
@@ -26,9 +26,9 @@ jobs:
           curl -L \
             -X POST \
             -H "Authorization: Bearer ${{secrets.API_TOKEN}}" \
-            -H "Accept: application/vnd.github.full+json" \
+            -H "Accept: application/vnd.github.v3+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/${{github.repository}}/issues \
-            -d '{"title":"Code Review Checklist","body_text": ${{ env.CHECKLIST }},"labels":["question"]}'
+            -d '{"title":"Code Review Checklist","body": ${{ env.CHECKLIST }},"labels":["question"]}'
         env:
           CHECKLIST: ${{ env.CHECKLIST }}
