--- a/.github/workflows/check-issue-checklist.yml
+++ b/.github/workflows/check-issue-checklist.yml
@@ -9,34 +9,33 @@ jobs:
   check-issue:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Authenticate GitHub CLI
         run: echo ${{ secrets.API_TOKEN }} | gh auth login --with-token
+
+      - name: Get Checklist Issue
+        id: get-issue
+        run: |
+          ISSUES=$(gh issue list --label "checklist" --state open --json number)
+          echo "ISSUES=$ISSUES" >> $GITHUB_ENV
+          ISSUE_NUMBER=$(echo "$ISSUES" | jq -r '.[0].number')
+          echo "ISSUE_NUMBER=$ISSUE_NUMBER" >> $GITHUB_ENV
 
       - name: Check if Checklist Issue is Completed
         id: check-issue
         run: |
-          ISSUES=$(gh issue list --label "question" --state open --json title,body)
-          echo "ISSUES=$ISSUES" >> $GITHUB_ENV
+          ISSUE_BODY=$(curl -L \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.API_TOKEN }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/${{ github.repository }}/issues/${{ env.ISSUE_NUMBER }} | jq -r '.body')
+          
           CHECKLIST_COMPLETED=true
-          for row in $(echo "${ISSUES}" | jq -r '.[] | @base64'); do
-            _jq() {
-             echo ${row} | base64 --decode | jq -r ${1}
-            }
-            TITLE=$(_jq '.title')
-            BODY=$(_jq '.body')
-            if [[ "$TITLE" == "Code Review Checklist" ]]; then
-              CHECKLIST_COMPLETED=false
-              for ITEM in $(echo "$BODY" | grep -o '\[ \]'); do
-                if [[ "$ITEM" == "[ ]" ]]; then
-                  CHECKLIST_COMPLETED=false
-                  break
-                fi
-              done
-              if $CHECKLIST_COMPLETED; then
-                break
-              fi
-            fi
-          done
+          if echo "$ISSUE_BODY" | grep -q '\[ \]'; then
+            CHECKLIST_COMPLETED=false
+          fi
 
           echo "CHECKLIST_COMPLETED=$CHECKLIST_COMPLETED" >> $GITHUB_ENV
 
